syntax = "proto3";

import "google/protobuf/timestamp.proto";

package statistics_proto;

option go_package = "soa-statistics/proto";

service StatisticsService {
  rpc GetPostStatistics(PostId) returns (PostStatistics) {}
  rpc GetTopKPosts(TopKRequest) returns (TopPosts) {}
  rpc GetTopKUsers(TopKRequest) returns (TopUsers) {}
}

message PostId {
  int32 post_id = 1;
}

message PostStatistics {
  int32 post_id = 1;
  int32 author_id = 4;
  uint64 num_likes = 2;
  uint64 num_views = 3;
}

message UsersStatistics {
  int32 author_id = 1;
  uint64 num_likes = 2;
  uint64 num_views = 3;
}

enum EventType {
  LIKE = 0;
  VIEW = 1;
}

message TopKRequest {
  EventType event = 1;
  uint64 k = 2;
}

message TopPosts {
  repeated PostStatistics posts = 1;
  google.protobuf.Timestamp time_collected = 2; 
}

message TopUsers {
  repeated UsersStatistics users = 1;
  google.protobuf.Timestamp time_collected = 2; 
}

