syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package posts_proto;

option go_package = "soa-main/posts_proto";

service PostsServer {
    rpc CreatePost(CreateRequest) returns (PostId) {}
    rpc UpdatePost(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc DeletePost(AuthoredPostId) returns (google.protobuf.Empty) {}
    rpc GetPost(AuthoredPostId) returns (Post) {}
    rpc GetPageOfPosts(PageOfPostsRequest) returns (PageOfPosts) {}

    rpc DeleteUser(UserId) returns (google.protobuf.Empty) {}
}

message CreateRequest {
    int64 author_id = 1;
    string text = 2;
}

message PostId {
    int64 id = 1;
}

message UserId {
    int64 id = 1;
}

message UpdateRequest {
    int64 author_id = 1;
    int64 post_id = 2;
    string text = 3;
}

message AuthoredPostId {
    int64 author_id = 1;
    int64 post_id = 2;
}

message Post {
    int64 id = 1;
    string text = 2;
    google.protobuf.Timestamp time_updated = 3; 
}

message PageOfPostsRequest {
    int64 author_id = 1;
    int32 page_num = 2;
    int32 page_size = 3;
}

message PageOfPosts {
    int32 page_num = 1;
    int32 page_size = 2;
    int64 author_id = 3;
    repeated Post posts = 4;
}
